Made necessary configurations for googlemapsflutter package Created mapview.dart and added a fixed location and a custom marker for the map

--- a/tuvalepp/android/app/src/main/AndroidManifest.xml
+++ b/tuvalepp/android/app/src/main/AndroidManifest.xml
@@ -30,5 +30,8 @@
         <meta-data
             android:name="flutterEmbedding"
             android:value="2" />
+            <meta-data
+                android:name="com.google.android.geo.API_KEY"
+                android:value="AIzaSyAQ1fXNF1sY_jg3OlGF0Y40hPpR9jfh7d4" />
     </application>
 </manifest>
