markers added programatically

--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -55,6 +55,8 @@ dev_dependencies:
 
 # The following section is specific to Flutter packages.
 flutter:
+  assets:
+    - assets/poop_marker.png
   fonts:
     - family: Inter
       fonts:
@@ -76,7 +78,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   # assets:
-  #   - images/a_dot_burr.jpeg
+  
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
